# dreams-supervisor

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  agents.py  local_tools.py  main.py  mcp_agents.py  mcp_main.py  mcp_server.py
